Css responsivo finalizado.

--- a/restaurant.html
+++ b/restaurant.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -49,12 +50,6 @@
     <!-- End reviews -->
   </main>
   <!-- End main -->
-
-  <!-- Beginning footer -->
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
-  <!-- End footer -->
   <!--<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>-->
   <!-- Beginning scripts -->
   <!-- Database helpers -->
@@ -62,8 +57,15 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATwTBU9Fak7yOjoEtX0OWEO6chyj0Nyrk&libraries=places&callback=initMap"></script> 
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbBdPiExNztXwNmxs-o9m6ucNPZVMNCXw&libraries=places&callback=initMap"></script> 
   <!-- End scripts -->
+
+  <!-- Beginning footer -->
+  <footer id="footer">
+    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  </footer>
+  <!-- End footer -->
+  
 
 </body>
 
