--- a/index.html
+++ b/index.html
@@ -5,24 +5,34 @@
   <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8" />
   <meta http-equiv="Content-Language" content="pt-br">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
+  <!-- Beginning header -->
   <header role="banner">
+    <!-- Beginning nav -->
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
+    <!-- End nav -->
   </header>
+  <!-- End header -->
 
+  <!-- Beginning main -->
   <main id="maincontent">
+    <!-- Beginning map -->
     <section id="map-container">
       <div id="map" role="map"></div>
     </section>
+    <!-- End map -->
     <section>
+      <!-- Beginning filter options -->
       <div class="filter-options">
         <h2>Filter Results</h2>
         <label for="neighborhoods-select" style="display: none;">Filter Results</label>
@@ -34,24 +44,30 @@
           <option value="all">All Cuisines</option>
         </select>
       </div>
+      <!-- End filter options -->
+      <!-- Beginning restaurant list -->
       <ul id="restaurants-list"></ul>
+      <!-- End restaurant list -->
     </section>
   </main>
-  <!--<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>-->
-  
+  <!-- End main -->
+
+  <!-- Beginning scripts -->
+  <!-- Database helpers -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  
+  <!-- Service Worker Register -->
   <script type="application/javascript" charset="utf-8" src="js/indexController.js"></script>
-
+  <!-- Main javascript file -->
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  
+  <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbBdPiExNztXwNmxs-o9m6ucNPZVMNCXw&libraries=places&callback=initMap"></script>
+  <!-- End scripts -->
 
-
+  <!-- Beginning footer -->
   <footer id="footer" role="contentinfo">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
-
+  <!-- End footer -->
 </body>
 
 </html>
