--- a/restaurant.html
+++ b/restaurant.html
@@ -52,10 +52,10 @@
     <!-- End reviews -->
   </main>
   <!-- End main -->
-  <!--<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>-->
   <!-- Beginning scripts -->
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
+  <!-- Service Worker Register -->
   <script type="application/javascript" charset="utf-8" src="js/indexController.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
@@ -68,7 +68,6 @@
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
-  
 
 </body>
 
