Refatorando codigo e inserindo tags do ARIA

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map" role="map"></div>
+      <div id="map" role="application" aria-label="Restaurants Map"></div>
     </section>
     <!-- End map -->
     <section>
